<resources>
    <string name="app_name">practica5</string>
    <!-- Menú -->

    <string name="action_valoravida">Valora vida</string>
    <string name="action_fechas">Mostrar entre fechas</string>
    <string name="action_setting">Configurar</string>
    <string name="action_about">Acerca de…</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="rb_asc">Asc</string>
    <string name="rb_desc">Desc</string>
    <string name="action_save">guardar</string>
    <string name="fecha">fecha</string>
    <string name="ic_calendar">Modificar fecha</string>
    <string name="et_resumen">Resumen del día</string>
    <string name="t_valor_vida">Valora tu día:</string>
    <string name="speach_valor_vida">selecciona una puntuación para tu día</string>
    <string name="dia_completo">Cuenta a tu diario tu día…</string>
    <string name="tvEjemplo">Texto de ejemplo</string>
    <string name="icono_valor_del_dia">Icono que valua el día</string>
    <string name="tvFecha">Aquí va la fecha</string>
    <string name="ic_delete">Borrar día</string>
    <string name="imgMedia">Imagen de la media</string>
    <string name="preference_file">preferencias</string>
    <string name="pref_key_ultimo_dia">pref_ultimo_dia</string>
    <string name="itlastday">Último día</string>

    <string-array name="spinner_vida">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="eres">
        <item>Chico</item>
        <item>Chica</item>
    </string-array>

    <!-- Strings de settings-->













    <string name="title_activity_preferencias">PreferenciasActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="titulo_settings">Datos Personales</string>
    <string name="settings_nombre">Cuál es tu nombre</string>
    <string name="settings_nombre_sum">Con qué nombre quieres que nos dirijamos a ti</string>
    <string name="settings_fecha">Fecha de Cumpleaños</string>
    <string name="settings_fecha_sum">Cuál es tu fecha de cumpleaños</string>
    <string name="settings_eres">Eres...</string>
    <string name="settings_eres_sum">Eres un/una...</string>
    <string name="settings_recuerda">Configuración del programa</string>
    <string name="settings_avisa">Avisarme de escribir en el Diario</string>
    <string name="settings_avisa_sum">¿Desea que le avisemos que tiene que escribir en el diario?</string>
    <string name="content_desc_img">Ver imágenes en la lista</string>


</resources>