<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itOrdenar"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ordenar"
        android:title="@string/action_ordenar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itvaloraVida"
        android:title="@string/action_valoravida"
        app:showAsAction="never" />
    <item
        android:id="@+id/itMostrarFechas"
        android:title="@string/action_fechas"
        app:showAsAction="never" />
    <item
        android:id="@+id/itLastDay"
        android:title="@string/itlastday" />
    <item
        android:id="@+id/itConfig"
        android:title="@string/action_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/itAcerca"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>