<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EdicionDiaActivityBien">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/action_save"
        android:src="@drawable/ic_action_save"
        app:backgroundTint="#304FFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fecha"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/calendario"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendario"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/action_fechas"
        app:icon="@drawable/ic_action_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/tvFecha"
        app:layout_constraintStart_toEndOf="@+id/tvFecha"
        app:layout_constraintTop_toTopOf="@+id/tvFecha"
        style="@style/ToggleButtonWithIconOnly" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/calendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btImagen"
        app:layout_constraintTop_toTopOf="@+id/calendario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tbResumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_resumen"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spValoracion"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/speach_valor_vida"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/ivFoto"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/calendario" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/t_valor_vida"
        app:layout_constraintBottom_toBottomOf="@+id/spValoracion"
        app:layout_constraintEnd_toStartOf="@+id/spValoracion"
        app:layout_constraintStart_toStartOf="@+id/tvFecha"
        app:layout_constraintTop_toBottomOf="@+id/calendario" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spValoracion"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/tbInfoDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/dia_completo"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </ScrollView>

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/spValoracion"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btImagen"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/content_desc_img"
        android:textIsSelectable="false"
        android:textSize="0sp"
        app:icon="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/calendario"
        app:layout_constraintStart_toEndOf="@+id/calendario"
        app:layout_constraintTop_toTopOf="@+id/calendario"
        style="@style/ToggleButtonWithIconOnly" />

</androidx.constraintlayout.widget.ConstraintLayout>