<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@android:color/holo_orange_light"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icono"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icono_valor_del_dia"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvResumen"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvEjemplo"
            card_view:layout_constraintEnd_toStartOf="@+id/btBorrar"
            card_view:layout_constraintStart_toEndOf="@+id/icono"
            card_view:layout_constraintTop_toTopOf="@+id/icono" />

        <TextView
            android:id="@+id/tvFechita"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:text="@string/tvFecha"
            card_view:layout_constraintEnd_toEndOf="@+id/tvResumen"
            card_view:layout_constraintStart_toEndOf="@+id/icono"
            card_view:layout_constraintTop_toBottomOf="@+id/tvResumen" />

        <Button
            android:id="@+id/btBorrar"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ic_delete"
            android:drawableTop="@android:drawable/ic_delete"
            card_view:layout_constraintBottom_toBottomOf="@+id/icono"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>